# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import openaiRouter from "./openai";
+import architectureRouter from "./architecture";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/openai", openaiRouter);
+router.use("/architecture", architectureRouter);
 
 export default router;
